2013-11-01 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* historydb.c:
	    Initialize also tokenbucket value so that freshly arrived
	    packet at the historydb will have at least 1.0 tokens
	    at hand to permit one initial digipeat. Will not be enough
	    for multi-transmitter case.

	* digipeater.c:
	    Display Ratelimit caused packet drops at all debug levels.
	    ( Instead of >1 )

	* filter.c:
	    Correct parse of s// filter.  (Original author not recorded.)

2013-10-08 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* config.c, digipeater.c:
	    Add conditionals so that --disable-igate works.

2013-10-07 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in, svnversion-test.sh:
	    A bit more complicated way to pick up SVNVERSION information.

	* aprx.c, VERSION, README, TODO, INSTALL, doc/aprx-manual.odt
	    Version 2.08 under way.

	* aprx.h, aprx.c, aprsis.c, aprx-stat.c, aprxpolls.c, beacon.c,
	  digipeater.c, dupecheck.c, erlang.c, interface.c, telemetry.c,
	  ttyreader.c:
	    Changed time tracking from "time_t" to "struct timeval".
	    This supports (sub)millisecond granularity e.g. in KISS
	    polling, and overall smoothness of processing.
	    No, it isn't really necessary besides of that KISS polling,
	    but unified API is always better.

2013-10-06 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* filter.c:
	    Add 'g/call1/call2..' filter to match "group messaging" recently
	    added on javAPRSSrvr.

	* doc/aprx-manual.odt:
	    Document internally supported APRS-IS style filter tokens.

	* filter.c:
	    Code cleaning around reference definitions.

	* filter.c:
	    * Add feature to recognize 3rd-party frames by type (t/3)
	    * Enable support of D filter (they are meaningful at RF too)

	* filter.c, aprx.c, aprx.h, config.c:
	    * Fix M filter preparation to include cos(lat).

	* aprx.h, interface.c, parse_aprs.c:
	    Always look inside 3rd party APRS frames too to determine